@@ -1,0 +1,14 @@
+{\rtf1\ansi\ansicpg1252\cocoartf949\cocoasubrtf270
+{\fonttbl\f0\froman\fcharset0 Times-Roman;}
+{\colortbl;\red255\green255\blue255;}
+{\info
+{\title }
+{\subject }
+{\doccomm }
+{\author }
+{\*\company }
+{\*\copyright }
+{\keywords cursorLocation=2}}\margl1008\margr1008\margt1008\vieww15520\viewh16400\viewkind2\viewscale120
+\pard\tx560\tx1120\tx1680\tx2240\tx2800\tx3360\tx3920\tx4480\tx5040\tx5600\tx6160\tx6720\sl360\slmult1\ql\qnatural\pardirnatural
+
+\f0\fs26 \cf0 C\'f6ntent}
